# matrix-calculator

./: .gitignore  CMakeLists.txt  Dockerfile
.github/workflows/: ci.yml
tests/: CMakeLists.txt
